<resources>
    <string name="get_pid" translatable="false">pids=""; for p in /proc/[0-9]*; do read -r -d \'\' model &lt;$p/cmdline || [[ $model ]]; if [[ $model = com.whatsapp ]]; then pids+="${p##*/},"; fi done; setprop mdgwa.pids ${pids%,}</string>
    <string name="app_name" translatable="false">MdgWa</string>
    <string name="app_desc">An Xposed module to customize your WhatsApp.</string>
    <string-array name="scope">
        <item>com.whatsapp</item>
        <item>android</item>
    </string-array>
    <string name="antirevoke">Anti-Delete Messages</string>
    <string name="antirevoke_sum">When active, messages will not be deleted for you.</string>
    <string name="ghostmode">Hide typing</string>
    <string name="ghostmode_sum">When active, the person cannot see that you are typing</string>
    <string name="ghostmode_r">Hide recording audio...</string>
    <string name="ghostmode_sum_r">When active, the person cannot see that you are recording audio</string>
    <string name="hidetag">Hide forwarding tag</string>
    <string name="hidetag_sum">When active, it allows you to forward messages without the forwarding tag.</string>
    <string name="hidestatusview">Hide Status View</string>
    <string name="hidestatusview_sum">When active, it allows you to view statuses without the person knowing that you watched them.</string>
    <string name="hideread">Hide Message View</string>
    <string name="hideread_sum">When active, it allows you to read messages without the person knowing that you have read them.</string>
    <string name="danger">Notice</string>
    <string name="reboot">Whenever you change something on this screen, restart WhatsApp!</string>
    <string name="reboot_module">Restart Module</string>
    <string name="funcoes">Functions</string>
    <string name="perso">Customization</string>
    <string name="segundosnahora">Seconds in Time</string>
    <string name="segundosnahora_sum">Put seconds next to times</string>
    <string name="textonahora">Add text next to the timetable</string>
    <string name="no_active">If you\'re on this screen, it means that you don\'t have the module active yet, don\'t have LSPosed installed, or don\'t have any WhatsApp APK patched by LSPatch.\n\nPlease fix it, restart the module, and try again</string>
    <string name="viewonce">Disable View Once</string>
    <string name="viewonce_sum">When active, it allows you to open view-once messages as many times as you want.</string>
    <string name="novotema">New WhatsApp theme</string>
    <string name="novotema_sum">When activated, it changes the color and icon theme to the new WhatsApp theme</string>
    <string name="antirevokestatus">Anti-Delete Status</string>
    <string name="antirevokestatus_sum">When active, statuses will not be cleared for you.</string>
    <string name="hidereceipt">Hide Receipt</string>
    <string name="lorem_ipsum_dolor" translatable="false">Lorem Ipsum Dolor</string>
    <string name="lorem_ipsum_dolor_sum" translatable="false">Lorem ipsum dolor sit amet,consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="hidereceipt_sum">Don\'t tell the users you\'ve received the messages</string>
    <string name="outros">Others</string>
    <string name="antirevoke_title">Anti Revoke</string>
    <string name="privacy_title">Privacy</string>
    <string name="settings_title">"Setings"</string>
    <string name="autoreboot">Auto restart</string>
    <string name="autoreboot_sum">This option needs root access! When enabled, WhatsApp will automatically restart to save all changes made here</string>
    <string name="root_needed">Root needed</string>
    <string name="root_needed_message">This option requires root access, grant root permissions in your SU Solution</string>
    <string name="xposedinit_error">Error starting Xposed</string>
    <string name="no_root">Error granting SU permission</string>
    <string name="ampm">Time in 12 Hour Format</string>
    <string name="media_settings">Media Settings</string>
    <string name="statusdowload">Download Status</string>
    <string name="statusdowload_sum">Create a button to download people\'s statuses</string>
    <string name="videoquality">Send videos in HD quality</string>
    <string name="videoquality_sum">Send videos in HD quality</string>
    <string name="colors_title">Colors</string>
    <string name="colors_customization">Customize your colors</string>
    <string name="colors_customization_sum">Change all colors in your WhatsApp, try it now!</string>
    <string name="current_color_s">Current color: %s</string>
    <string name="apply_button">Apply</string>
    <string name="invalid_color">Invalid color</string>
    <string name="social_media_title">Social media</string>
    <string name="telegram_group">Telegram Group</string>
    <string name="telegram_channel">Telegram Channel</string>
    <string name="github" translatable="false">Github</string>
    <string name="itsmadruga">ItsMadruga (Owner)</string>
    <string name="darker935">Darker935 (Contributor)</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="required_version_s">Required version: %s</string>
    <string name="installed_version_s">Installed version: %s</string>
    <string name="whatsapp_version_error">This WhatsApp version isn\'t supported by our module, please go to the required WhatsApp version</string>
    <string name="whatsapp_not_installed">WhatsApp isn\'t installed! Install and try again</string>
    <string name="restart_whatsapp">Restart whatsapp</string>
    <string name="media_title">Media</string>
    <string name="general">General</string>
    <string name="novahome">New home style</string>
    <string name="conversation">Conversation</string>
    <string name="primary_color">Primary color</string>
    <string name="background_color">Background color</string>
    <string name="secondary_color">Secondary color</string>
    <string name="novaconfig">New settings style</string>
    <string name="novaconfig_sum">Enable the new settings style, with a profile photo in home toolbar</string>
    <string name="novahome_sum">Enable the new home style, with bottom navigation</string>
    <string name="novofiltro">Filter chats</string>
    <string name="novofiltro_sum">Enable native filter chats, located on the top of home screen, filtering contats, business, and others</string>
    <string name="menuwicon">Menu icons</string>
    <string name="menuwicon_sum">Add icons on menu options along the app</string>
    <string name="strokebuttons">Buttons stroke</string>
    <string name="strokebuttons_sum">Create a stroke around some buttons on WhatsApp</string>
    <string name="outlinedicons">Outlined icons</string>
    <string name="outlinedicons_sum">New icons style, if you like, enable it</string>
    <string name="freezelastseen">Freeze last seen</string>
    <string name="freezelastseen_sum">When it\'s enabled, you\'ll dont see any presence updates from other users, like typing, recording, online…</string>
    <string name="removeforwardlimit_sum">Remove forward limit for 5 chats (normal) and 1 chat (multiple times)</string>
    <string name="removeforwardlimit">Remove forward limit</string>
    <string name="forward">Forward</string>
    <string name="home">Home screen</string>
    <string name="showname">Show name</string>
    <string name="showname_sum">Show your account name on the top of home screen, replacing \"WhatsApp\" by your name.</string>
    <string name="showbio_sum">Show your bio below the title of toolbar</string>
    <string name="showbio">Show bio</string>
    <string name="reset_preferences">Reset preferences</string>
    <string name="reset_preferences_sum">Tap here to reset all the saved module settings</string>
    <string name="reset_preferences_message">This action will reset all saved preferences in module, and you\'ll need to enable all buttons again</string>
    <string name="reset">Reset</string>
    <string name="bubble_left">Bubble left</string>
    <string name="bubble_right">Bubble right</string>
    <string name="general_summary">Customizations implemented natively by Whatsapp</string>
    <string name="home_summary">Customize home screen to your liking</string>
    <string name="conversation_summary">Change some things in your conversation screen, like balloons, entry, and others</string>
    <string name="privacy_summary">Hide read confirmation, hide receipt, last seen, and more</string>
    <string name="media_summary">Download status, media settings, and more</string>
    <string name="module_working_text">Module working with %s</string>
    <string name="module_not_working">Module not working</string>
    <string name="lsposed_not_found">LSPosed not found</string>
    <string name="lspatch_not_found">LSPatch not found</string>
    <string name="loading">Loading</string>
    <string name="module_not_enabled_text">The module is disabled on LSPosed</string>
    <string name="module_not_setted_text">The module is enabled, but the scope is empty</string>
    <string name="imagequality">Send imag in HD quality</string>
    <string name="imagequality_sum">Send images in HD quality</string>
    <string name="downloadviewonce">Download View Once</string>
    <string name="downloadviewonce_sum">Create a view once download button</string>
    <string name="separate_groups_sum">Separate your chats by: groups, private chats, status, calls, communities</string>
    <string name="separate_groups">Separate groups</string>
</resources>