<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/perso"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <its.madruga.wpp.views.SwitchButtonTop
                    android:id="@+id/novotema"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/novotema_sum"
                    android:tag="novotema"
                    android:text="@string/novotema"
                    android:title="@string/general" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/novofiltro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/novofiltro_sum"
                    android:tag="novofiltro"
                    android:text="@string/novofiltro" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/strokebuttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/strokebuttons_sum"
                    android:tag="strokebuttons"
                    android:text="@string/strokebuttons" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/menuwicon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/menuwicon_sum"
                    android:tag="menuwicon"
                    android:text="@string/menuwicon" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/outlinedicons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/outlinedicons_sum"
                    android:tag="outlinedicons"
                    android:text="@string/outlinedicons" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/novaconfig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/novaconfig_sum"
                    android:tag="novaconfig"
                    android:text="@string/novaconfig" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>