<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/privacy_title"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <its.madruga.wpp.views.SwitchButtonTop
                    android:id="@+id/hidetag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/hidetag_sum"
                    android:tag="hidetag"
                    android:text="@string/hidetag"
                    android:title="@string/privacy_title" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/freezelastseen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/freezelastseen_sum"
                    android:tag="freezelastseen"
                    android:text="@string/freezelastseen" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/hidestatusview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/hidestatusview_sum"
                    android:tag="hidestatusview"
                    android:text="@string/hidestatusview" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/hideread"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/hideread_sum"
                    android:tag="hideread"
                    android:text="@string/hideread" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/hidereceipt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/hidereceipt_sum"
                    android:tag="hidereceipt"
                    android:text="@string/hidereceipt" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/ghostmode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/ghostmode_sum"
                    android:tag="ghostmode"
                    android:text="@string/ghostmode" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/viewonce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/viewonce_sum"
                    android:tag="viewonce"
                    android:text="@string/viewonce" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>
