<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/perso"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="2dp">

                <its.madruga.wpp.views.TextViewButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/home_summary"
                    android:text="@string/home"
                    app:loadClass="its.madruga.wpp.activities.personalization.PersonalizationHomeActivity" />

                <its.madruga.wpp.views.TextViewButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/general_summary"
                    android:text="@string/general"
                    app:loadClass="its.madruga.wpp.activities.personalization.PersonalizationGeneralActivity" />

                <its.madruga.wpp.views.TextViewButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/conversation_summary"
                    android:text="@string/conversation"
                    app:loadClass="its.madruga.wpp.activities.personalization.PersonalizationConvActivity" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <its.madruga.wpp.views.SwitchButtonTop
                    android:id="@+id/changecolor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/colors_customization_sum"
                    android:tag="changecolor"
                    android:text="@string/colors_customization"
                    android:title="@string/colors_title" />

                <its.madruga.wpp.views.ColorPickerButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/current_color_s"
                    android:tag="primary_color"
                    android:text="@string/primary_color" />

                <its.madruga.wpp.views.ColorPickerButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/current_color_s"
                    android:tag="secondary_color"
                    android:text="@string/secondary_color" />

                <its.madruga.wpp.views.ColorPickerButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/current_color_s"
                    android:tag="background_color"
                    android:text="@string/background_color" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>