<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/perso"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <its.madruga.wpp.views.SwitchButtonTop
                    android:id="@+id/shownamehome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/showname_sum"
                    android:tag="shownamehome"
                    android:text="@string/showname"
                    android:title="@string/home" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/showbiohome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/showbio_sum"
                    android:tag="showbiohome"
                    android:text="@string/showbio" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/separategroups"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/separate_groups_sum"
                    android:tag="separategroups"
                    android:text="@string/separate_groups" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>