<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/funcoes"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="2dp">

                <its.madruga.wpp.views.TextViewButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_title"
                    app:loadClass="its.madruga.wpp.activities.functions.FunctionsPrivacyActivity"
                    android:summary="@string/privacy_summary"/>

                <its.madruga.wpp.views.TextViewButton
                    app:loadClass="its.madruga.wpp.activities.functions.FunctionsMediaActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/media_title"
                    android:summary="@string/media_summary"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--                    <its.madruga.wpp.views.SwitchButtonTop-->
                <!--                        android:id="@+id/antirevokea"-->
                <!--                        android:layout_width="match_parent"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:summary="@string/antirevoke_sum"-->
                <!--                        android:tag="antirevoke"-->
                <!--                        android:text="@string/antirevoke"-->
                <!--                        android:title="@string/antirevoke_title" />-->

                <!--                    <its.madruga.wpp.views.SwitchButton-->
                <!--                        android:id="@+id/antirevokestatusa"-->
                <!--                        android:layout_width="match_parent"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:summary="@string/antirevokestatus_sum"-->
                <!--                        android:tag="antirevokestatus"-->
                <!--                        android:text="@string/antirevokestatus" />-->

                <its.madruga.wpp.views.RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/antirevoke_buttons"
                    android:entryValues="@array/antirevoke_values"
                    android:summary="@string/antirevoke_sum"
                    android:tag="antirevoke"
                    android:text="@string/antirevoke_title" />

                <its.madruga.wpp.views.RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/antirevoke_buttons"
                    android:entryValues="@array/antirevoke_values"
                    android:summary="@string/antirevokestatus_sum"
                    android:tag="antirevokestatus"
                    android:text="@string/antirevokestatus" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <its.madruga.wpp.views.SwitchButtonTop
                    android:id="@+id/removeforwardlimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/removeforwardlimit_sum"
                    android:tag="removeforwardlimit"
                    android:text="@string/removeforwardlimit"
                    android:title="@string/forward" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</ScrollView>